# SpaceMV-CoAI-Map

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  eslint.config.mjs  jest.config.ts  jest.preset.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  vitest.workspace.ts
.envs/: README.md
.envs/map-ai/dev/: agent.env.example  api.env.example  docker.env.example  web.env.example
.envs/map-ai/test/: agent.env.example  api.env.example  docker.env.example  web.env.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/release-notes/: release-template.md
.github/workflows/: ci.yml  codeql-analysis.yml
apps/map-ai/agent/: README.md  project.json  pyproject.toml
apps/map-ai/docs/: 00需求.md  03架构.md
apps/map-ai/server/: jest.config.cts  project.json  webpack.config.js
apps/map-ai/server-e2e/: jest.config.cts  project.json
apps/map-ai/web/: README.md  index.html  postcss.config.js  project.json  tailwind.config.js  tsconfig.app.json  vite.config.mts
apps/map-ai/web-e2e/: playwright.config.ts  project.json
conf/: nginx.conf
docker/: map-ai-agent.Dockerfile  map-ai-api.Dockerfile
docker/infra/: docker-compose.yml
libs/features/ai-chat/: README.md  eslint.config.mjs  package.json  project.json  tsconfig.lib.json  vite.config.mts
libs/features/map-core/: project.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.mts
(+210 files in other folders)
