[project]
name = "txwx-monorepo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = [
  "apps/map-ai/agent",
  "features/*/agent",
  "packages/py-*"
]

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
